--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -16,9 +16,8 @@
           [property]="selectedProperty"
         ></app-amenities-section>
       </div>
-      <div class="col-md-12 fixed-reserve">
         <!-- <app-reverse-section ></app-reverse-section> -->
-        <div class="col-md-12 d-flex justify-content-center">
+        <div class="col-md-12 d-flex justify-content-center px-0">
           <app-BookingCalendar
             [propertyId]="propertyId"
             [checkIn]="selectedDates.start"
@@ -28,7 +27,7 @@
           >
           </app-BookingCalendar>
         </div>
-      </div>
+      
     </div>
     <div
       class="bookinCalender position-relative"
