--- a/src/app/pages/PropertyDetails/contact-host/contact-host.component.css
+++ b/src/app/pages/PropertyDetails/contact-host/contact-host.component.css
@@ -101,20 +101,19 @@
         }
 
         .faq-question {
-            font-size: 16px;
+            font-size: 1.4rem;
             font-weight: 600;
             color: #222222;
             margin-bottom: 8px;
         }
 
         .faq-answer {
-            color: #717171;
-            font-size: 16px;
+            color: #251a1a;
+            font-size: 1rem;
             line-height: 1.5;
         }
 
         .faq-list {
-            list-style: none;
             margin: 0;
         }
 
@@ -211,7 +210,9 @@
             overflow: hidden;
         }
 
-
+ul{
+    list-style: disc !important;
+}
         .property-preview {
             display: flex;
             margin-bottom: 24px;
