--- a/src/app/pages/PropertyDetails/propertImage-galary/propertImage-galary.component.css
+++ b/src/app/pages/PropertyDetails/propertImage-galary/propertImage-galary.component.css
@@ -89,7 +89,7 @@ overflow-x: hidden;
 .main-image img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 12px 0 0 12px;
 }
 
@@ -111,7 +111,7 @@ overflow-x: hidden;
 .grid-image img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   /* border-radius: 0;  */
 }
 
@@ -160,7 +160,7 @@ overflow-x: hidden;
 .main-image img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 12px 0 0 12px;
   transition: transform 0.3s ease;
 }
