--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -101,6 +101,8 @@
 </app-modal> -->
 </div>
 
+<app-chat-bot></app-chat-bot>
+
 <app-wish-list-modal
   *ngIf="show"
   [propertyId]="selectedPropertyId"
